--- a/pixi.toml
+++ b/pixi.toml
@@ -18,9 +18,17 @@ configure = { cmd = [
   "-B",
   "build/",
 ] }
-build = { cmd = "cmake --build build/", depends-on = ["configure"] }
+generate-templates = { cmd = [
+  "python",
+  "src/parse_mjxmacro.py",
+  "build/_deps/mujoco-src",
+], depends-on = [
+  "configure",
+] }
+build = { cmd = "cmake --build build/", depends-on = ["generate-templates"] }
 install = { cmd = "cmake --install build/", depends-on = ["build"] }
 
 [dependencies]
 emscripten = ">=3.1.58,<4"
 cmake = ">=3.31.5,<4"
+python = "==3.11"
