--- a/package.json
+++ b/package.json
@@ -28,7 +28,13 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "http-server": "^14.1.1",
-    "three": "^0.150.1"
+    "three": "^0.172.0"
   },
-  "types": "./dist/mujoco_wasm.d.ts"
+  "types": "./dist/mujoco_wasm.d.ts",
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
